exports[`prefer-negative-index > invalid(1): /**/foo.slice(foo.length - 2, foo.length - 1) 1`] = `

  1 | /**/foo.slice(foo.length - 2, foo.length - 1)

`;

exports[`prefer-negative-index > invalid(1): /**/foo.slice(foo.length - 2, foo.length - 1) 2`] = `

Message:
> 1 | /**/foo.slice(foo.length - 2, foo.length - 1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`slice\`.

Output:
  1 | /**/foo.slice(-2, -1)

`;

exports[`prefer-negative-index > invalid(10): [].toSpliced.call(foo, foo.length - 3, foo.length - 6) 1`] = `

  1 | [].toSpliced.call(foo, foo.length - 3, foo.length - 6)

`;

exports[`prefer-negative-index > invalid(10): [].toSpliced.call(foo, foo.length - 3, foo.length - 6) 2`] = `

Message:
> 1 | [].toSpliced.call(foo, foo.length - 3, foo.length - 6)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`toSpliced\`.

Output:
  1 | [].toSpliced.call(foo, -3, foo.length - 6)

`;

exports[`prefer-negative-index > invalid(11): foo.subarray(foo.length - 3, foo.length - 6) 1`] = `

  1 | foo.subarray(foo.length - 3, foo.length - 6)

`;

exports[`prefer-negative-index > invalid(11): foo.subarray(foo.length - 3, foo.length - 6) 2`] = `

Message:
> 1 | foo.subarray(foo.length - 3, foo.length - 6)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`subarray\`.

Output:
  1 | foo.subarray(-3, -6)

`;

exports[`prefer-negative-index > invalid(12): Uint8Array.prototype.subarray.call(foo, foo.length - 3, foo.length - 6) 1`] = `

  1 | Uint8Array.prototype.subarray.call(foo, foo.length - 3, foo.length - 6)

`;

exports[`prefer-negative-index > invalid(12): Uint8Array.prototype.subarray.call(foo, foo.length - 3, foo.length - 6) 2`] = `

Message:
> 1 | Uint8Array.prototype.subarray.call(foo, foo.length - 3, foo.length - 6)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`subarray\`.

Output:
  1 | Uint8Array.prototype.subarray.call(foo, -3, -6)

`;

exports[`prefer-negative-index > invalid(13): Uint8Array.prototype.subarray.apply(foo, [foo.length - 3, foo.length - 6]) 1`] = `

  1 | Uint8Array.prototype.subarray.apply(foo, [foo.length - 3, foo.length - 6])

`;

exports[`prefer-negative-index > invalid(13): Uint8Array.prototype.subarray.apply(foo, [foo.length - 3, foo.length - 6]) 2`] = `

Message:
> 1 | Uint8Array.prototype.subarray.apply(foo, [foo.length - 3, foo.length - 6])
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`subarray\`.

Output:
  1 | Uint8Array.prototype.subarray.apply(foo, [-3, -6])

`;

exports[`prefer-negative-index > invalid(14): (foo as string[]).slice((foo as string[]).length - 1) 1`] = `

  1 | (foo as string[]).slice((foo as string[]).length - 1)

`;

exports[`prefer-negative-index > invalid(14): (foo as string[]).slice((foo as string[]).length - 1) 2`] = `

Message:
> 1 | (foo as string[]).slice((foo as string[]).length - 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`slice\`.

Output:
  1 | (foo as string[]).slice(-1)

`;

exports[`prefer-negative-index > invalid(15): (array as number[]).splice((array as number[]).length - 2, 1) 1`] = `

  1 | (array as number[]).splice((array as number[]).length - 2, 1)

`;

exports[`prefer-negative-index > invalid(15): (array as number[]).splice((array as number[]).length - 2, 1) 2`] = `

Message:
> 1 | (array as number[]).splice((array as number[]).length - 2, 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`splice\`.

Output:
  1 | (array as number[]).splice(-2, 1)

`;

exports[`prefer-negative-index > invalid(16): Array.prototype.slice.call(foo as any[], (foo as any[]).length - 1) 1`] = `

  1 | Array.prototype.slice.call(foo as any[], (foo as any[]).length - 1)

`;

exports[`prefer-negative-index > invalid(16): Array.prototype.slice.call(foo as any[], (foo as any[]).length - 1) 2`] = `

Message:
> 1 | Array.prototype.slice.call(foo as any[], (foo as any[]).length - 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`slice\`.

Output:
  1 | Array.prototype.slice.call(foo as any[], -1)

`;

exports[`prefer-negative-index > invalid(17): foo!.slice(foo!.length - 1) 1`] = `

  1 | foo!.slice(foo!.length - 1)

`;

exports[`prefer-negative-index > invalid(17): foo!.slice(foo!.length - 1) 2`] = `

Message:
> 1 | foo!.slice(foo!.length - 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`slice\`.

Output:
  1 | foo!.slice(-1)

`;

exports[`prefer-negative-index > invalid(18): (foo satisfies string[]).slice((foo satisfies string[]).length - 1) 1`] = `

  1 | (foo satisfies string[]).slice((foo satisfies string[]).length - 1)

`;

exports[`prefer-negative-index > invalid(18): (foo satisfies string[]).slice((foo satisfies string[]).length - 1) 2`] = `

Message:
> 1 | (foo satisfies string[]).slice((foo satisfies string[]).length - 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`slice\`.

Output:
  1 | (foo satisfies string[]).slice(-1)

`;

exports[`prefer-negative-index > invalid(19): foo.slice((foo.length satisfies number) - 1) 1`] = `

  1 | foo.slice((foo.length satisfies number) - 1)

`;

exports[`prefer-negative-index > invalid(19): foo.slice((foo.length satisfies number) - 1) 2`] = `

Message:
> 1 | foo.slice((foo.length satisfies number) - 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`slice\`.

Output:
  1 | foo.slice(-1)

`;

exports[`prefer-negative-index > invalid(2): /**/foo.splice(foo.length - 1, 1) 1`] = `

  1 | /**/foo.splice(foo.length - 1, 1)

`;

exports[`prefer-negative-index > invalid(2): /**/foo.splice(foo.length - 1, 1) 2`] = `

Message:
> 1 | /**/foo.splice(foo.length - 1, 1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`splice\`.

Output:
  1 | /**/foo.splice(-1, 1)

`;

exports[`prefer-negative-index > invalid(20): foo.slice((foo.length - 1) as number) 1`] = `

  1 | foo.slice((foo.length - 1) as number)

`;

exports[`prefer-negative-index > invalid(20): foo.slice((foo.length - 1) as number) 2`] = `

Message:
> 1 | foo.slice((foo.length - 1) as number)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`slice\`.

Output:
  1 | foo.slice((-1) as number)

`;

exports[`prefer-negative-index > invalid(21): foo.slice(foo.length - (1 as const)) 1`] = `

  1 | foo.slice(foo.length - (1 as const))

`;

exports[`prefer-negative-index > invalid(21): foo.slice(foo.length - (1 as const)) 2`] = `

Message:
> 1 | foo.slice(foo.length - (1 as const))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`slice\`.

Output:
  1 | foo.slice(- (1 as const))

`;

exports[`prefer-negative-index > invalid(22): array!.splice(array!.length - 2, 1) 1`] = `

  1 | array!.splice(array!.length - 2, 1)

`;

exports[`prefer-negative-index > invalid(22): array!.splice(array!.length - 2, 1) 2`] = `

Message:
> 1 | array!.splice(array!.length - 2, 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`splice\`.

Output:
  1 | array!.splice(-2, 1)

`;

exports[`prefer-negative-index > invalid(3): foo.bar.slice(foo[\"bar\"].length - 1) 1`] = `

  1 | foo.bar.slice(foo["bar"].length - 1)

`;

exports[`prefer-negative-index > invalid(3): foo.bar.slice(foo[\"bar\"].length - 1) 2`] = `

Message:
> 1 | foo.bar.slice(foo["bar"].length - 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`slice\`.

Output:
  1 | foo.bar.slice(-1)

`;

exports[`prefer-negative-index > invalid(4): foo[\`bar\`].slice(foo[\"bar\"].length - 1) 1`] = `

  1 | foo[\`bar\`].slice(foo["bar"].length - 1)

`;

exports[`prefer-negative-index > invalid(4): foo[\`bar\`].slice(foo[\"bar\"].length - 1) 2`] = `

Message:
> 1 | foo[\`bar\`].slice(foo["bar"].length - 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`slice\`.

Output:
  1 | foo[\`bar\`].slice(-1)

`;

exports[`prefer-negative-index > invalid(5): foo[1].slice(foo[\"1\"].length - 1) 1`] = `

  1 | foo[1].slice(foo["1"].length - 1)

`;

exports[`prefer-negative-index > invalid(5): foo[1].slice(foo[\"1\"].length - 1) 2`] = `

Message:
> 1 | foo[1].slice(foo["1"].length - 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`slice\`.

Output:
  1 | foo[1].slice(-1)

`;

exports[`prefer-negative-index > invalid(6): foo['bar'].slice(foo[\"bar\"].length - 1) 1`] = `

  1 | foo['bar'].slice(foo["bar"].length - 1)

`;

exports[`prefer-negative-index > invalid(6): foo['bar'].slice(foo[\"bar\"].length - 1) 2`] = `

Message:
> 1 | foo['bar'].slice(foo["bar"].length - 1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`slice\`.

Output:
  1 | foo['bar'].slice(-1)

`;

exports[`prefer-negative-index > invalid(7): foo.at(foo.length - 1);\nArray.prototype.at.call(foo, foo.length - 2);\nArray.prototype.at.apply(foo, [foo.length - 3]); 1`] = `

  1 | foo.at(foo.length - 1);
  2 | Array.prototype.at.call(foo, foo.length - 2);
  3 | Array.prototype.at.apply(foo, [foo.length - 3]);

`;

exports[`prefer-negative-index > invalid(7): foo.at(foo.length - 1);\nArray.prototype.at.call(foo, foo.length - 2);\nArray.prototype.at.apply(foo, [foo.length - 3]); 2`] = `

Message:
> 1 | foo.at(foo.length - 1);
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`at\`.
  2 | Array.prototype.at.call(foo, foo.length - 2);
  3 | Array.prototype.at.apply(foo, [foo.length - 3]);

Output:
  1 | foo.at(-1);
  2 | Array.prototype.at.call(foo, foo.length - 2);
  3 | Array.prototype.at.apply(foo, [foo.length - 3]);

`;

exports[`prefer-negative-index > invalid(7): foo.at(foo.length - 1);\nArray.prototype.at.call(foo, foo.length - 2);\nArray.prototype.at.apply(foo, [foo.length - 3]); 3`] = `

Message:
  1 | foo.at(foo.length - 1);
> 2 | Array.prototype.at.call(foo, foo.length - 2);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`at\`.
  3 | Array.prototype.at.apply(foo, [foo.length - 3]);

Output:
  1 | foo.at(foo.length - 1);
  2 | Array.prototype.at.call(foo, -2);
  3 | Array.prototype.at.apply(foo, [foo.length - 3]);

`;

exports[`prefer-negative-index > invalid(7): foo.at(foo.length - 1);\nArray.prototype.at.call(foo, foo.length - 2);\nArray.prototype.at.apply(foo, [foo.length - 3]); 4`] = `

Message:
  1 | foo.at(foo.length - 1);
  2 | Array.prototype.at.call(foo, foo.length - 2);
> 3 | Array.prototype.at.apply(foo, [foo.length - 3]);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`at\`.

Output:
  1 | foo.at(foo.length - 1);
  2 | Array.prototype.at.call(foo, foo.length - 2);
  3 | Array.prototype.at.apply(foo, [-3]);

`;

exports[`prefer-negative-index > invalid(8): foo.toSpliced(foo.length - 3, foo.length - 6) 1`] = `

  1 | foo.toSpliced(foo.length - 3, foo.length - 6)

`;

exports[`prefer-negative-index > invalid(8): foo.toSpliced(foo.length - 3, foo.length - 6) 2`] = `

Message:
> 1 | foo.toSpliced(foo.length - 3, foo.length - 6)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`toSpliced\`.

Output:
  1 | foo.toSpliced(-3, foo.length - 6)

`;

exports[`prefer-negative-index > invalid(9): Array.prototype.toSpliced.call(foo, foo.length - 3, foo.length - 6) 1`] = `

  1 | Array.prototype.toSpliced.call(foo, foo.length - 3, foo.length - 6)

`;

exports[`prefer-negative-index > invalid(9): Array.prototype.toSpliced.call(foo, foo.length - 3, foo.length - 6) 2`] = `

Message:
> 1 | Array.prototype.toSpliced.call(foo, foo.length - 3, foo.length - 6)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer negative index over length minus index for \`toSpliced\`.

Output:
  1 | Array.prototype.toSpliced.call(foo, -3, foo.length - 6)

`;
